2006-05-23  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/writer.py (KickstartWriter.doFirewall):  Rename --ports
	to match the parser.

2006-05-17  Peter Jones  <pjones@redhat.com>

	* pykickstart/parser.py: Add "multipath" command and doMultiPath
	handler.
	* pykickstart/data.py: Add kickstartMpPathData and
	KickstartMultiPathData objects to handle multipath info, as well as
	KickstartData.mpaths .
	* pykickstart/writer.py: add doMultiPath
	* docs/programmers-guide: add completely useless documentation for
	multipath kickstart objects.

2006-05-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/data.py (KickstartNetworkData):  Add MTU (#191328).
	* pykickstart/parser.py (KickstartHandlers.doNetwork):  Likewise.
	* pykickstart/writer.py (KickstartWriter.doNetwork):  Likweise.

2006-05-10  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartHandlers.doTimezone):  Accept
	--isUtc for backwards compatibility.

2006-05-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-04-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py (KickstartUserData):  Added.
	(KickstartData):  Added lists for services and users.
	* pykickstart/parser.py (KickstartParser.doServices,
	KickstartParser.doUser):  Add new command handlers.
	Consolidate code to copy from option parsers to ksdata.
	* pykickstart/writer.py (KickstartWriter.doServices,
	KickstartParser.doUser):  Add new command handlers.

2006-04-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py:  More output formatting fixes.

2006-04-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/constants.py:  Start CLEARPART_ constants at 0.

2006-04-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-04-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py (KickstartRepoData):  Added.